source/reset.scss
// RESET
// -----------------------------------------------------------------------------

@use "settings" as *;
@use "helpers/style-focus" as *;

// Universal

*,
*::before,
*::after {
  box-sizing: border-box;
}

// Root

html {
  height: 100%;
}

// Body

body {
  width: 100%;
  height: 100%;
  margin: 0;
  font-family: $font-family-sans;
  font-size: $font-size-1;
  line-height: $line-height-1-5;
  font-weight: $font-weight-400;
  color: $color-neutral-050;
  background-color: $color-white;
  -webkit-tap-highlight-color: transparent;
}

// Address

address {
  font-style: normal;
}

// Blockquote

blockquote {
  margin: 0;
  overflow-wrap: break-word;
}

// Definition, ordered, and unordered list

dl,
ol,
ul {
  margin-top: 0;
  margin-bottom: 0;
}

ol,
ul {
  padding-left: 2rem;
  list-style: none;

  li {
    overflow-wrap: break-word;
  }
}

dt {
  font-weight: $font-weight-700;
  overflow-wrap: break-word;
}

dd {
  margin-left: 0;
  overflow-wrap: break-word;
}

// Figure

figure {
  margin: 0;
}

// Heading

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: $font-weight-700;
  overflow-wrap: break-word;
}

h1 {
  font-size: $font-size-3;
  line-height: $line-height-1-166;
}

h2 {
  font-size: $font-size-2;
  line-height: $line-height-1-25;
}

h3 {
  font-size: $font-size-1-5;
  line-height: $line-height-1-333;
}

h4 {
  font-size: $font-size-1-3125;
  line-height: $line-height-1-333;
}

h5 {
  font-size: $font-size-1-125;
  line-height: $line-height-1-333;
}

h6 {
  font-size: $font-size-1;
  line-height: $line-height-1-5;
}

// Thematic break

hr {
  overflow: visible;
  height: 0.125rem;
  border: 0;
  margin-top: 0;
  margin-bottom: 0;
  background-color: $color-neutral-700;
}

// Paragraph

p {
  margin-top: 0;
  margin-bottom: 0;
  overflow-wrap: break-word;
}

// Preformatted text

pre {
  overflow: auto;
  margin-top: 0;
  margin-bottom: 0;
  font-family: $font-family-monospace;

  code {
    font-size: inherit;
  }
}

// Table

table {
  border-collapse: collapse;
}

// Audio, canvas, iframe, image, scalable vector graphics, and video

audio,
canvas,
iframe,
img,
svg,
video {
  display: block;
  max-width: 100%;
}

audio[controls],
video[controls] {
  &:focus-visible {
    @include style-focus(radius-1);
  }
}

// Button, input, select, and textarea

button,
input,
select,
textarea {
  margin: 0;
  font: inherit;

  &:disabled {
    cursor: default;
  }
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
  cursor: pointer;
  -webkit-appearance: button;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
}

[type="search"] {
  -webkit-appearance: textfield;

  &::-webkit-search-decoration {
    -webkit-appearance: none;
  }
}

textarea {
  resize: vertical;
}

// Fieldset

fieldset {
  min-width: 0;
  padding: 0;
  border: 0;
  margin-right: 0;
  margin-left: 0;
}

legend {
  width: 100%;
  padding-right: 0;
  padding-left: 0;
  font-weight: $font-weight-700;
}

// Label

label {
  display: inline-block;
}

// Anchor

a {
  text-decoration: none;
}

// Abbreviation

abbr[title] {
  cursor: help;
}

// Bold and strong

b,
strong {
  font-weight: $font-weight-700;
}

// Code, user input, and sample output

code,
kbd,
samp {
  font-family: $font-family-monospace;
}

code,
kbd {
  font-size: 0.875em;
}

kbd {
  kbd {
    font-size: inherit;
  }
}

// Small

small {
  font-size: 0.875em;
}

// Subscript and superscript

sub,
sup {
  position: relative;
  vertical-align: baseline;
  font-size: 0.75em;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

// Summary

summary {
  cursor: pointer;
}

// Editable content

[contenteditable] {
  &:focus-visible {
    @include style-focus(radius-1);
  }
}

